--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <!-- Press -->
 
   <section id="press" class="colored-section">
-    <img class="prees-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="prees-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="prees-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="prees-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="prees-logo" src="images/mashable.png" alt="mashable-logo">
